--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,10 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+header {
+  background-color: gray;
+  height: 3rem;
 }
-
-.App-link {
-  color: #09d3ac;
+.nav-bar {
+  /* background-color: blue; */
+  text-align: right;
 }
